# ufox-llm

./: .gitignore  Cargo.toml  README.md  llm-sdk-prompt-v4.md
examples/: .env.example  basic_chat.rs  chat_basic.rs  chat_no_thinking.rs  compatible_provider.rs  multi_chat.rs  multi_turn.rs  multimodal.rs  streaming.rs  tool_calling.rs  tool_options.rs
src/: client.rs  error.rs  lib.rs  middleware.rs
src/client/: builder.rs  config.rs  mod.rs
src/provider/: mod.rs
src/provider/compatible/: mod.rs  stream.rs
src/provider/openai/: audio.rs  embedding.rs  http.rs  image.rs  media.rs  mod.rs  request.rs  response.rs  stream.rs  tests.rs
src/provider/openai/chat_completions/: mod.rs  stream.rs
src/provider/openai/responses/: mod.rs  stream.rs
src/provider/qwen/: mod.rs  request.rs  response.rs  stream.rs
src/types/: message.rs  mod.rs  request.rs  response.rs  tool.rs
src/types/content/: mod.rs
ufox-arc/: Cargo.toml  arc-prompt-advanced.md  arc-prompt.md  code-organization.md
ufox-arc/examples/: hitl_agent.rs  memory_agent.rs  multimodal_agent.rs  simple_agent.rs  tool_agent.rs
ufox-arc/src/: error.rs  lib.rs
ufox-arc/src/agent/: builder.rs  config.rs  core.rs  loop_.rs  memory_client.rs  mod.rs  runner.rs  runtime.rs  step.rs
ufox-arc/src/interrupt/: cli.rs  mod.rs
ufox-arc/src/memory/: client.rs  mod.rs  strategy.rs
ufox-arc/src/memory/backend/: in_memory.rs  mod.rs  sqlite.rs
ufox-arc/src/multimodal/: mod.rs
ufox-arc/src/ratelimit/: mod.rs
ufox-arc/src/run/: executor.rs  mod.rs  model.rs  session.rs  trace.rs
ufox-arc/src/run/executor/: helpers.rs  mod.rs  once.rs  stream.rs
ufox-arc/src/session/: media.rs  mod.rs  session_store.rs  store.rs  streaming.rs
ufox-arc/src/thread/: attachment.rs  media.rs  mod.rs  store.rs  thread_store.rs
ufox-arc/src/tools/: manager.rs  mod.rs  result.rs
ufox-arc/src/tools/builtin/: file.rs  mod.rs  shell.rs
ufox-arc/tests/: phase2_execution_trace.rs  phase7_production.rs  phase7_streaming.rs
