[package]
name = "ufox-llm"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
bytes = "1"
thiserror = "2"
tracing = "0.1"
async-trait = "0.1"
mime_guess = "2"
base64 = "0.22"
dotenvy = "0.15"

[dev-dependencies]
wiremock = "0.6"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
