[package]
name = "ufox-arc"
version = "0.1.0"
edition = "2024"

[dependencies]
ufox-llm = { path = "../ufox-llm" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"
async-stream = "0.3"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
futures = "0.3"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "chrono", "uuid"] }
reqwest = { version = "0.13", features = ["stream"] }
shell-words = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
wiremock = "0.6.5"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0.102"
tempfile = "3"
